# __COPYRIGHT__
# __FILE__ __REVISION__ __DATE__ __DEVELOPER__


                 SCons - a software construction tool

                            Change Log



RELEASE X.XX - XXX, XX XXX XXXX XX:XX:XX -XXXX

  From Steven Knight:

  - Fix use of CPPDEFINES with C++ source files.

  From Gary Oberbrunner:

  - Fix how the man page un-indents after examples in some browsers.



RELEASE 0.93 - Thu, 23 Oct 2003 07:26:55 -0500

  From J.T. Conklin:

  - On POSIX, execute commands with the more modern os.spawnvpe()
    function, if it's available.

  - Scan .S, .spp and .SPP files for C preprocessor dependencies.

  - Refactor the Job.Parallel() class to use a thread pool without a
    condition variable.  This improves parallel build performance and
    handles keyboard interrupts properly when -j is used.

  From Charles Crain:

  - Add support for a JARCHDIR variable to control changing to a
    directory using the jar -C option.

  - Add support for detecting Java manifest files when using jar,
    and specifying them using the jar m flag.

  - Fix some Python 2.2 specific things in various tool modules.

  - Support directories as build sources, so that a rebuild of a target
    can be triggered if anything underneath the directory changes.

  - Have the scons.bat and scons.py files look for the SCons modules
    in site-packages as well.

  From Christian Engel:

  - Support more flexible inclusion of separate C and C++ compilers.

  - Use package management tools on AIX and Solaris to find where
    the comilers are installed, and what version they are.

  - Add support for CCVERSION and CXXVERSION variables for a number
    of C and C++ compilers.

  From Sergey Fogel:

  - Add test cases for the new capabilities to run bibtex and to rerun
    latex as needed.

  From Ralf W. Grosse-Kunstleve:

  - Accomodate anydbm modules that don't have a sync() method.

  - Allow SConsignFile() to take an argument specifying the DBM
    module to be used.
