@@ -14,6 +14,9 @@ RELEASE X.XX - XXX, XX XXX XXXX XX:XX:XX -XXXX
 
   - Fix use of CPPDEFINES with C++ source files.
 
+  - Fix env.Append() when the operand is an object with a __cmp__()
+    method (like a Scanner instance).
+
   From Gary Oberbrunner:
 
   - Fix how the man page un-indents after examples in some browsers.
